# probabilistic_spatial_memory

./: .clang-format  .gitignore  .gitmodules  EXPERIMENTS.md  JOURNAL.md  Makefile  README.md  TODO.md  TODO.md for Code Duplication Issues  TODO.md for Consistency Issues  TODO.md for Error Handling Issues  TODO.md for Memory Management Issues  psm-viz.toml.example  pyrefly.toml  requirements-paper.txt
benchmarks/: bench_brute_force_clip_bigg_features.json  bench_brute_force_clip_l_features.json  benchmark_nymeria_psm_query.c  benchmark_spatial_memory.c  benchmark_tile_decode.c  sweep_spatial_memory.sh  sweep_tile_decode.sh
configs/: psm-viz-balanced.toml  psm-viz-low-hitch.toml
docs/: VISUALIZER.md
extraction/: pyproject.toml
extraction/psm_extraction/: __init__.py  __main__.py  align.py  extract.py  migrate.py  progress.py  schema.py  writer.py
extraction/psm_extraction/io/: __init__.py  aria_vrs.py  ego4d_nlq.py  egoexo4d_atomic.py  egoexo4d_take.py  json_sidecar.py  lookout.py  nymeria_narration.py  sloper4d.py  video.py
extraction/psm_extraction/models/: __init__.py  base.py  clip_mlx.py  clip_pytorch.py  dino_pytorch.py  jepa_pytorch.py  longclip_pytorch.py  registry.py  siglip_pytorch.py
extraction/tests/: conftest.py  test_align.py  test_ego4d_nlq.py  test_extract.py  test_json_sidecar.py  test_migrate.py  test_models_registry.py  test_schema.py  test_writer.py
include/: ring_buffer.h  spatial_memory.h  tile.h
journal/: PAPER.md  localization_paradox.html  localization_paradox.md  localization_paradox2.md  paper_revision_plan.md  results_v1.md  (+2 more)
(+209 files in other folders)
